feat: 머지 전 백업

--- a/src/frontend/src/css/MyVideoBox.css
+++ b/src/frontend/src/css/MyVideoBox.css
@@ -7,10 +7,13 @@
 
 .my-video-box {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
+  border: 2px solid #ccc;
 }
 
 .video-container {
-  margin: 10px;
+  flex: 1 0 auto;
 }
