--- a/src/frontend/src/css/MediaPage.css
+++ b/src/frontend/src/css/MediaPage.css
@@ -2,16 +2,20 @@
   width: 100%;
   height: 100%;
   background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  overflow: auto;
 }
 
 .page-container:hover .media-title {
   opacity: 1;
 }
 
-.page-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  position: relative;
+.page-container:hover .media-disconnect {
+  opacity: 1;
 }
