--- a/src/frontend/src/css/MediaContainer.css
+++ b/src/frontend/src/css/MediaContainer.css
@@ -12,7 +12,7 @@
 }
 
 .voice-connection p {
-  margin: 0;
+  margin: 0 auto;
 }
 
 .connected {
@@ -27,8 +27,10 @@
 
 .media-tools {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 10px;
+  border-top: 1px solid #4e4e4e;
+  padding-top: 10px;
 }
 
 .media_button {
@@ -40,9 +42,14 @@
   transition: background-color 0.2s ease;
   font-size: 12px;
   height: 30px;
+  width: 100px;
 }
 
 .media_button:hover {
+  background-color: #5865f2;
+}
+
+.media-selected {
   background-color: #5865f2;
 }
 
