feat: Dm 페이지 생성. status 및 channel css작업.

--- a/src/frontend/src/css/Channels.css
+++ b/src/frontend/src/css/Channels.css
@@ -10,6 +10,10 @@
   overflow-y: scroll;
 }
 
+.channel-container::-webkit-scrollbar {
+  display: none;
+}
+
 .channel-title-container {
   width: 100%;
   height: 50px;
